[package]
name = "root-market-maker-ob"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "root_market_maker_ob"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
enable-gpl = []

[dependencies]
anchor-lang = "^0.28.0"
anchor-spl = "^0.28.0"
openbook-v2 = { git = "https://github.com/openbook-dex/openbook-v2.git", features = ["cpi"] }
solana-program = "~1.16.1"